# python_tg_bot

./: .replit  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  run.sh
.github/: deploy.yaml
.github/workflows/: deploy.yaml
docker_usage_scripts/: cmd_docker.py
