[tool.poetry]
package-mode = false

[project]
name = "venv"
version = "0.1.0"
description = ""
authors = [
    {name = "SeltonSoer",email = "43191445+SeltonSoer@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.10.0",
    "certifi==2025.8.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "python-telegram-bot==22.3",
    "sniffio==1.3.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
